// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TabList custom ListStyle style 1`] = `
.c0 {
  background-color: white;
  text-align: left;
  position: relative;
  white-space: nowrap;
  overflow: hidden;
  width: auto;
  padding: 0 0px 0 0px;
}

.c1 {
  overflow: hidden;
}

.c2 {
  padding-left: 0;
  position: relative;
  margin: 0;
  list-style: none;
  display: inline-block;
  -webkit-transition: -webkit-transform .3s cubic-bezier(.42,0,.58,1);
  -webkit-transition: transform .3s cubic-bezier(.42,0,.58,1);
  transition: transform .3s cubic-bezier(.42,0,.58,1);
}

.c3 {
  display: inline-block;
  padding: 10px 15px;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c3:hover {
  cursor: pointer;
  color: black;
}

.c4 {
  vertical-align: middle;
}

<TabList
  customStyle={
    Object {
      "CustomTabList": Object {
        "$$typeof": Symbol(react.forward_ref),
        "attrs": undefined,
        "componentStyle": ComponentStyle {
          "componentId": "sc-gZMcBi",
          "isStatic": false,
          "rules": Array [
            "
      background-color: white;
      text-align: left;
      position: relative;
      white-space: nowrap;
      overflow: hidden;
      width: auto;
      padding: ",
            [Function],
            ";
    ",
            "
          background-color: red;
        ",
          ],
        },
        "displayName": "Styled(styled.div)",
        "render": [Function],
        "styledComponentId": "sc-gZMcBi",
        "target": "div",
        "toString": [Function],
        "warnTooManyClasses": [Function],
        "withComponent": [Function],
      },
    }
  }
>
  <div>
    <styled.div
      hasExtraButton={false}
    >
      <StyledComponent
        forwardedClass={
          Object {
            "$$typeof": Symbol(react.forward_ref),
            "attrs": undefined,
            "componentStyle": ComponentStyle {
              "componentId": "sc-bdVaJa",
              "isStatic": false,
              "lastClassName": "c0",
              "rules": Array [
                "
            background-color: white;
            text-align: left;
            position: relative;
            white-space: nowrap;
            overflow: hidden;
            width: auto;
            padding: ",
                [Function],
                ";
          ",
              ],
            },
            "displayName": "styled.div",
            "render": [Function],
            "styledComponentId": "sc-bdVaJa",
            "target": "div",
            "toString": [Function],
            "warnTooManyClasses": [Function],
            "withComponent": [Function],
          }
        }
        forwardedRef={null}
        hasExtraButton={false}
      >
        <div
          className="c0"
        >
          <styled.div>
            <StyledComponent
              forwardedClass={
                Object {
                  "$$typeof": Symbol(react.forward_ref),
                  "attrs": undefined,
                  "componentStyle": ComponentStyle {
                    "componentId": "sc-bwzfXH",
                    "isStatic": true,
                    "lastClassName": "c1",
                    "rules": Array [
                      "
                  overflow: hidden;
                ",
                    ],
                  },
                  "displayName": "styled.div",
                  "render": [Function],
                  "styledComponentId": "sc-bwzfXH",
                  "target": "div",
                  "toString": [Function],
                  "warnTooManyClasses": [Function],
                  "withComponent": [Function],
                }
              }
              forwardedRef={[Function]}
            >
              <div
                className="c1"
              >
                <styled.ul
                  role="tablist"
                >
                  <StyledComponent
                    forwardedClass={
                      Object {
                        "$$typeof": Symbol(react.forward_ref),
                        "attrs": undefined,
                        "componentStyle": ComponentStyle {
                          "componentId": "sc-htpNat",
                          "isStatic": true,
                          "lastClassName": "c2",
                          "rules": Array [
                            "
                        padding-left: 0;
                        position: relative;
                        margin: 0;
                        list-style: none;
                        display: inline-block;
                        transition: transform .3s cubic-bezier(.42, 0, .58, 1);
                      ",
                          ],
                        },
                        "displayName": "styled.ul",
                        "render": [Function],
                        "styledComponentId": "sc-htpNat",
                        "target": "ul",
                        "toString": [Function],
                        "warnTooManyClasses": [Function],
                        "withComponent": [Function],
                      }
                    }
                    forwardedRef={[Function]}
                    role="tablist"
                  >
                    <ul
                      className="c2"
                      role="tablist"
                    >
                      <Tab
                        active={false}
                        index={0}
                        key="0/.0"
                        tabIndex={0}
                      >
                        <styled.li
                          active={false}
                          aria-controls="react-tabtab-panel-0"
                          aria-selected={false}
                          id="react-tabtab-tab-0"
                          onClick={[Function]}
                          role="tab"
                        >
                          <StyledComponent
                            active={false}
                            aria-controls="react-tabtab-panel-0"
                            aria-selected={false}
                            forwardedClass={
                              Object {
                                "$$typeof": Symbol(react.forward_ref),
                                "attrs": undefined,
                                "componentStyle": ComponentStyle {
                                  "componentId": "sc-EHOje",
                                  "isStatic": false,
                                  "lastClassName": "c3",
                                  "rules": Array [
                                    "
                                display: ",
                                    [Function],
                                    ";
                                ",
                                    [Function],
                                    "
                              
                                user-select: none;
                                &:hover {
                                  cursor: pointer;
                                  color: black;
                                }
                              ",
                                  ],
                                },
                                "displayName": "styled.li",
                                "render": [Function],
                                "styledComponentId": "sc-EHOje",
                                "target": "li",
                                "toString": [Function],
                                "warnTooManyClasses": [Function],
                                "withComponent": [Function],
                              }
                            }
                            forwardedRef={[Function]}
                            id="react-tabtab-tab-0"
                            onClick={[Function]}
                            role="tab"
                          >
                            <li
                              aria-controls="react-tabtab-panel-0"
                              aria-selected={false}
                              className="c3"
                              id="react-tabtab-tab-0"
                              onClick={[Function]}
                              role="tab"
                            >
                              <styled.span>
                                <StyledComponent
                                  forwardedClass={
                                    Object {
                                      "$$typeof": Symbol(react.forward_ref),
                                      "attrs": undefined,
                                      "componentStyle": ComponentStyle {
                                        "componentId": "sc-bZQynM",
                                        "isStatic": true,
                                        "lastClassName": "c4",
                                        "rules": Array [
                                          "
                                      vertical-align: middle;
                                    ",
                                        ],
                                      },
                                      "displayName": "styled.span",
                                      "render": [Function],
                                      "styledComponentId": "sc-bZQynM",
                                      "target": "span",
                                      "toString": [Function],
                                      "warnTooManyClasses": [Function],
                                      "withComponent": [Function],
                                    }
                                  }
                                  forwardedRef={null}
                                >
                                  <span
                                    className="c4"
                                  >
                                    Tab1
                                  </span>
                                </StyledComponent>
                              </styled.span>
                            </li>
                          </StyledComponent>
                        </styled.li>
                      </Tab>
                    </ul>
                  </StyledComponent>
                </styled.ul>
              </div>
            </StyledComponent>
          </styled.div>
        </div>
      </StyledComponent>
    </styled.div>
  </div>
</TabList>
`;

exports[`TabList render Tab List 1`] = `
.c0 {
  background-color: white;
  text-align: left;
  position: relative;
  white-space: nowrap;
  overflow: hidden;
  width: auto;
  padding: 0 0px 0 0px;
}

.c1 {
  overflow: hidden;
}

.c2 {
  padding-left: 0;
  position: relative;
  margin: 0;
  list-style: none;
  display: inline-block;
  -webkit-transition: -webkit-transform .3s cubic-bezier(.42,0,.58,1);
  -webkit-transition: transform .3s cubic-bezier(.42,0,.58,1);
  transition: transform .3s cubic-bezier(.42,0,.58,1);
}

.c3 {
  display: inline-block;
  padding: 10px 15px;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c3:hover {
  cursor: pointer;
  color: black;
}

.c4 {
  vertical-align: middle;
}

<TabList
  customStyle={Object {}}
>
  <div>
    <styled.div
      hasExtraButton={false}
    >
      <StyledComponent
        forwardedClass={
          Object {
            "$$typeof": Symbol(react.forward_ref),
            "attrs": undefined,
            "componentStyle": ComponentStyle {
              "componentId": "sc-bdVaJa",
              "isStatic": false,
              "lastClassName": "c0",
              "rules": Array [
                "
            background-color: white;
            text-align: left;
            position: relative;
            white-space: nowrap;
            overflow: hidden;
            width: auto;
            padding: ",
                [Function],
                ";
          ",
              ],
            },
            "displayName": "styled.div",
            "render": [Function],
            "styledComponentId": "sc-bdVaJa",
            "target": "div",
            "toString": [Function],
            "warnTooManyClasses": [Function],
            "withComponent": [Function],
          }
        }
        forwardedRef={null}
        hasExtraButton={false}
      >
        <div
          className="c0"
        >
          <styled.div>
            <StyledComponent
              forwardedClass={
                Object {
                  "$$typeof": Symbol(react.forward_ref),
                  "attrs": undefined,
                  "componentStyle": ComponentStyle {
                    "componentId": "sc-bwzfXH",
                    "isStatic": true,
                    "lastClassName": "c1",
                    "rules": Array [
                      "
                  overflow: hidden;
                ",
                    ],
                  },
                  "displayName": "styled.div",
                  "render": [Function],
                  "styledComponentId": "sc-bwzfXH",
                  "target": "div",
                  "toString": [Function],
                  "warnTooManyClasses": [Function],
                  "withComponent": [Function],
                }
              }
              forwardedRef={[Function]}
            >
              <div
                className="c1"
              >
                <styled.ul
                  role="tablist"
                >
                  <StyledComponent
                    forwardedClass={
                      Object {
                        "$$typeof": Symbol(react.forward_ref),
                        "attrs": undefined,
                        "componentStyle": ComponentStyle {
                          "componentId": "sc-htpNat",
                          "isStatic": true,
                          "lastClassName": "c2",
                          "rules": Array [
                            "
                        padding-left: 0;
                        position: relative;
                        margin: 0;
                        list-style: none;
                        display: inline-block;
                        transition: transform .3s cubic-bezier(.42, 0, .58, 1);
                      ",
                          ],
                        },
                        "displayName": "styled.ul",
                        "render": [Function],
                        "styledComponentId": "sc-htpNat",
                        "target": "ul",
                        "toString": [Function],
                        "warnTooManyClasses": [Function],
                        "withComponent": [Function],
                      }
                    }
                    forwardedRef={[Function]}
                    role="tablist"
                  >
                    <ul
                      className="c2"
                      role="tablist"
                    >
                      <Tab
                        active={false}
                        index={0}
                        key="0/.0"
                        tabIndex={0}
                      >
                        <styled.li
                          active={false}
                          aria-controls="react-tabtab-panel-0"
                          aria-selected={false}
                          id="react-tabtab-tab-0"
                          onClick={[Function]}
                          role="tab"
                        >
                          <StyledComponent
                            active={false}
                            aria-controls="react-tabtab-panel-0"
                            aria-selected={false}
                            forwardedClass={
                              Object {
                                "$$typeof": Symbol(react.forward_ref),
                                "attrs": undefined,
                                "componentStyle": ComponentStyle {
                                  "componentId": "sc-EHOje",
                                  "isStatic": false,
                                  "lastClassName": "c3",
                                  "rules": Array [
                                    "
                                display: ",
                                    [Function],
                                    ";
                                ",
                                    [Function],
                                    "
                              
                                user-select: none;
                                &:hover {
                                  cursor: pointer;
                                  color: black;
                                }
                              ",
                                  ],
                                },
                                "displayName": "styled.li",
                                "render": [Function],
                                "styledComponentId": "sc-EHOje",
                                "target": "li",
                                "toString": [Function],
                                "warnTooManyClasses": [Function],
                                "withComponent": [Function],
                              }
                            }
                            forwardedRef={[Function]}
                            id="react-tabtab-tab-0"
                            onClick={[Function]}
                            role="tab"
                          >
                            <li
                              aria-controls="react-tabtab-panel-0"
                              aria-selected={false}
                              className="c3"
                              id="react-tabtab-tab-0"
                              onClick={[Function]}
                              role="tab"
                            >
                              <styled.span>
                                <StyledComponent
                                  forwardedClass={
                                    Object {
                                      "$$typeof": Symbol(react.forward_ref),
                                      "attrs": undefined,
                                      "componentStyle": ComponentStyle {
                                        "componentId": "sc-bZQynM",
                                        "isStatic": true,
                                        "lastClassName": "c4",
                                        "rules": Array [
                                          "
                                      vertical-align: middle;
                                    ",
                                        ],
                                      },
                                      "displayName": "styled.span",
                                      "render": [Function],
                                      "styledComponentId": "sc-bZQynM",
                                      "target": "span",
                                      "toString": [Function],
                                      "warnTooManyClasses": [Function],
                                      "withComponent": [Function],
                                    }
                                  }
                                  forwardedRef={null}
                                >
                                  <span
                                    className="c4"
                                  >
                                    Tab1
                                  </span>
                                </StyledComponent>
                              </styled.span>
                            </li>
                          </StyledComponent>
                        </styled.li>
                      </Tab>
                    </ul>
                  </StyledComponent>
                </styled.ul>
              </div>
            </StyledComponent>
          </styled.div>
        </div>
      </StyledComponent>
    </styled.div>
  </div>
</TabList>
`;
